--- a/HMS-Team3-SwiftApp/Controllers/Storyboards/DoctorStoryboards/HomeStoryboard.storyboard
+++ b/HMS-Team3-SwiftApp/Controllers/Storyboards/DoctorStoryboards/HomeStoryboard.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ohr-tX-AhG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ohr-tX-AhG">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,10 +18,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" name="secondary"/>
+                        <color key="selectedImageTintColor" name="secondary"/>
                     </tabBar>
                     <connections>
                         <segue destination="88d-ZN-WFR" kind="relationship" relationship="viewControllers" id="a3h-5r-WbO"/>
                         <segue destination="x0L-Gz-vn0" kind="relationship" relationship="viewControllers" id="rcr-AR-nQk"/>
+                        <segue destination="fW7-iU-gjP" kind="relationship" relationship="viewControllers" id="M34-oy-yww"/>
+                        <segue destination="EGp-Fc-5Ib" kind="relationship" relationship="viewControllers" id="SxW-DR-rgh"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rYQ-k0-LDl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -42,15 +47,41 @@
             <objects>
                 <viewControllerPlaceholder storyboardIdentifier="ScheduleViewController" storyboardName="ScheduleStoryboard" referencedIdentifier="ScheduleViewController" id="x0L-Gz-vn0" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" id="Uj6-Qo-FPg">
-                        <imageReference key="image" image="house" catalog="system" symbolScale="medium"/>
+                        <imageReference key="image" image="person.line.dotted.person" catalog="system" symbolScale="medium"/>
                     </tabBarItem>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xlF-21-08R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="818" y="-17"/>
         </scene>
+        <!--DoctorChatNavigationController-->
+        <scene sceneID="2PJ-jr-tO9">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="DoctorChatNavigationController" storyboardName="ChatStoryboard" referencedIdentifier="DoctorChatNavigationController" id="fW7-iU-gjP" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chat" image="message.badge" catalog="system" id="8pa-ul-l77"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yqc-NY-CkF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="826" y="93"/>
+        </scene>
+        <!--DoctorProfileNavigationController-->
+        <scene sceneID="44K-j9-lO6">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="DoctorProfileNavigationController" storyboardName="DoctorProfileStoryboard" referencedIdentifier="DoctorProfileNavigationController" id="EGp-Fc-5Ib" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" image="person.circle" catalog="system" id="Mzc-hd-7ba"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wOv-Oc-1fq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="827" y="208"/>
+        </scene>
     </scenes>
     <resources>
         <image name="house" catalog="system" width="128" height="104"/>
+        <image name="message.badge" catalog="system" width="128" height="116"/>
+        <image name="person.circle" catalog="system" width="128" height="123"/>
+        <image name="person.line.dotted.person" catalog="system" width="128" height="58"/>
+        <namedColor name="secondary">
+            <color red="0.043137254901960784" green="0.68235294117647061" blue="0.62352941176470589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
