--- a/HMS-Team3-SwiftApp/Controllers/Storyboards/LoginStoryboard.storyboard
+++ b/HMS-Team3-SwiftApp/Controllers/Storyboards/LoginStoryboard.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PNe-PX-b1d">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PNe-PX-b1d">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -15,17 +15,17 @@
             <objects>
                 <viewController id="Ynv-pS-dsl" customClass="DoctorLoginViewController" customModule="HMS_Team3_SwiftApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oZW-6h-QZa">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Doctor Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gSq-3w-3MW">
-                                <rect key="frame" x="0.0" y="30" width="393" height="24"/>
+                                <rect key="frame" x="0.0" y="89" width="393" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter Doctor ID" textAlignment="center" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="eTw-9I-8Im">
-                                <rect key="frame" x="24" y="294" width="345" height="50"/>
+                                <rect key="frame" x="24" y="353" width="345" height="50"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="77G-iL-poX"/>
@@ -34,7 +34,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter Your Password" textAlignment="center" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="ilr-NE-cRU">
-                                <rect key="frame" x="24" y="359" width="345" height="50"/>
+                                <rect key="frame" x="24" y="418" width="345" height="50"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="hjB-Fh-oa1"/>
@@ -43,13 +43,13 @@
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8S0-PM-hhu">
-                                <rect key="frame" x="209" y="419" width="160" height="35"/>
+                                <rect key="frame" x="209" y="478" width="160" height="35"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Forget Password?"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b0W-tT-M6d">
-                                <rect key="frame" x="30" y="704" width="333" height="38"/>
+                                <rect key="frame" x="30" y="645" width="333" height="38"/>
                                 <color key="tintColor" red="0.098039209840000002" green="0.60392159219999997" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Login" cornerStyle="capsule">
@@ -120,29 +120,24 @@
                                 <rect key="frame" x="33" y="107" width="312" height="277"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="HMS TEAM 3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z1y-Ww-qNz">
-                                <rect key="frame" x="121" y="398" width="151" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TRANQUIL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z1y-Ww-qNz">
+                                <rect key="frame" x="121" y="398" width="158" height="39"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="32"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Pioneering India’s first complete Healthcare Ecosystem for providers and patients" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D9E-CW-SlS">
-                                <rect key="frame" x="16" y="409" width="361" height="106"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="11"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Pioneering India’s first complete Healthcare Ecosystem for providers and patients" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D9E-CW-SlS">
+                                <rect key="frame" x="33" y="409" width="333" height="106"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="106" id="W2Y-Pf-qNe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Account Type" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3io-Gn-P39">
-                                <rect key="frame" x="126" y="540" width="148" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rj2-dF-NET">
-                                <rect key="frame" x="20" y="578" width="353" height="80"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rj2-dF-NET">
+                                <rect key="frame" x="20" y="542" width="353" height="80"/>
                                 <color key="backgroundColor" name="secondary"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="OfM-rD-DTp"/>
@@ -158,8 +153,8 @@
                                     <segue destination="Ynv-pS-dsl" kind="show" id="Y2u-05-s2C"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lsS-DM-QF3">
-                                <rect key="frame" x="20" y="678" width="353" height="80"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lsS-DM-QF3">
+                                <rect key="frame" x="20" y="642" width="353" height="80"/>
                                 <color key="backgroundColor" name="secondary"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="c7S-Qo-Jip"/>
@@ -179,11 +174,15 @@
                         <viewLayoutGuide key="safeArea" id="gao-YI-Dij"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="gao-YI-Dij" firstAttribute="trailing" secondItem="D9E-CW-SlS" secondAttribute="trailing" constant="30" id="17N-Ud-ZTL"/>
                             <constraint firstItem="lsS-DM-QF3" firstAttribute="top" secondItem="Rj2-dF-NET" secondAttribute="bottom" constant="20" id="Ahf-sZ-Kox"/>
                             <constraint firstItem="gao-YI-Dij" firstAttribute="bottom" secondItem="lsS-DM-QF3" secondAttribute="bottom" constant="60" id="GrH-fE-7my"/>
                             <constraint firstItem="lsS-DM-QF3" firstAttribute="leading" secondItem="gao-YI-Dij" secondAttribute="leading" constant="20" id="K1D-qh-jYp"/>
                             <constraint firstItem="gao-YI-Dij" firstAttribute="trailing" secondItem="lsS-DM-QF3" secondAttribute="trailing" constant="20" id="aGo-pA-816"/>
+                            <constraint firstItem="D9E-CW-SlS" firstAttribute="centerY" secondItem="QPV-n2-wax" secondAttribute="centerY" constant="60" id="abR-1g-6OV"/>
+                            <constraint firstItem="D9E-CW-SlS" firstAttribute="leading" secondItem="gao-YI-Dij" secondAttribute="leading" constant="30" id="f2l-qf-L80"/>
                             <constraint firstItem="Rj2-dF-NET" firstAttribute="leading" secondItem="gao-YI-Dij" secondAttribute="leading" constant="20" id="p3v-54-7ag"/>
+                            <constraint firstItem="D9E-CW-SlS" firstAttribute="centerX" secondItem="QPV-n2-wax" secondAttribute="centerX" id="qcp-Z3-Hbb"/>
                             <constraint firstItem="gao-YI-Dij" firstAttribute="trailing" secondItem="Rj2-dF-NET" secondAttribute="trailing" constant="20" id="vUq-fG-jIF"/>
                         </constraints>
                     </view>
@@ -197,7 +196,7 @@
             <objects>
                 <viewController id="Bba-pQ-flP" customClass="LoginViewController" customModule="HMS_Team3_SwiftApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jg1-Km-74O">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="SRG-ZW-k1f"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
