--- a/HMS-Team3-SwiftApp/Controllers/Storyboards/DoctorStoryboards/DoctorProfileStoryboard.storyboard
+++ b/HMS-Team3-SwiftApp/Controllers/Storyboards/DoctorStoryboards/DoctorProfileStoryboard.storyboard
@@ -242,15 +242,15 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="epb-Af-D98" userLabel="DatePickerView">
                                         <rect key="frame" x="20" y="46.333333333333314" width="313" height="361"/>
                                         <subviews>
-                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="30" style="inline" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Z3-5Y-1dp">
+                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="30" style="inline" translatesAutoresizingMaskIntoConstraints="NO" id="0Z3-5Y-1dp">
                                                 <rect key="frame" x="0.0" y="0.0" width="313" height="326"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="tintColor" name="secondary"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="326" id="ctM-d1-mWM"/>
                                                 </constraints>
-                                                <date key="date" timeIntervalSinceReferenceDate="704633006.28346705">
-                                                    <!--2023-05-01 11:23:26 +0000-->
+                                                <date key="minimumDate" timeIntervalSinceReferenceDate="31575600">
+                                                    <!--2002-01-01 11:00:00 +0000-->
                                                 </date>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="color" keyPath="textColor">
@@ -274,6 +274,9 @@
                                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="baseBackgroundColor" name="secondary"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="onSubmitHandler:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="jcQ-dG-ZlH"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -338,12 +341,17 @@
                     <navigationItem key="navigationItem" title="Profile" largeTitleDisplayMode="always" id="pHa-uM-dNr"/>
                     <connections>
                         <outlet property="ageContainerView" destination="Q3Q-Vx-tg9" id="wm0-la-tpV"/>
+                        <outlet property="ageLabel" destination="RTA-IE-UtN" id="hGj-Yv-OXX"/>
                         <outlet property="datePicker" destination="0Z3-5Y-1dp" id="sA0-HZ-xAl"/>
                         <outlet property="doctorProfile" destination="noR-AZ-l9j" id="9w7-3c-C8K"/>
+                        <outlet property="doctorProfileHeader" destination="aSN-ys-gUa" id="QWf-fR-8fY"/>
                         <outlet property="nameContainerView" destination="eWu-Gy-v5A" id="zIc-MX-MeD"/>
+                        <outlet property="nameLabel" destination="bZU-4X-bQc" id="D82-DR-MNc"/>
                         <outlet property="phoneContainerView" destination="GB3-j1-saz" id="frG-8e-kYX"/>
-                        <outlet property="sexContainerView" destination="BRb-IM-seE" id="wfo-xK-zZz"/>
-                        <outlet property="submitButton" destination="HCg-8M-FiB" id="WDX-tF-8lY"/>
+                        <outlet property="phoneLabel" destination="rWK-Pk-MB8" id="9u8-58-fsA"/>
+                        <outlet property="sexContainerView" destination="BRb-IM-seE" id="9mM-Ab-CQg"/>
+                        <outlet property="sexLabel" destination="BQc-fa-Gwy" id="xts-4P-hWU"/>
+                        <outlet property="submitButton" destination="HCg-8M-FiB" id="NV3-qX-RkG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
